[tool.poetry]
name = "redditthreadinspector"
version = "1.0.0"
description = "Make graphs from comments on threads"

license = "MIT"

authors = [
	"Amndeep Singh Mann <amndeep.dev@gmail.com>"
]

readme = "README.md"

keywords = ["reddit", "graphs"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.4"
psaw = "*"
python-dotenv = "^0.10.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
